# SMLogic

./: .gitattributes  .gitignore  Cargo.toml  README.md  SMExporter.py  SMLogic.py  SMSimulate.py  baseParts.py  build.rs  exporter.py  test.py  test2.py  test3.py  todo.txt  update_changes.txt
assets/: icon.kra
github_resources/: lua_scripting.md
logic_sim/: Cargo.toml  gates.json
logic_sim/src/: kernel.cl  logic.rs  main.rs
python_library/smlogic-generator/: __main__.py
sample_projects/6502/: ALU.sml  main_cpu.sml
sample_projects/6502/address_modes/: implied.sml
sample_projects/6502/main_logic/: adc.sml  and.sml  asl.sml  bit.sml  cmp.sml  dec.sml  eor.sml  inc.sml  lsr.sml  ora.sml  rol.sml  ror.sml  sbc.sml
sample_projects/6502/random_modules/: 16_bit_data_checklist.sml  16_bit_register.sml  16_bit_tick_gate.sml  4_bit_decoder.sml  8_ bit_register.sml  8_bit_data_checklist.sml  8_bit_decoder.sml  8_bit_tick_gate.sml  8_individual_bit_register.sml  checklist.sml  clock_check.sml  clock_check_8b.sml  increment.sml  increment_16.sml
sample_projects/6502/scripts/: decoder_generator.lua  renameTower.lua
sample_projects/bad_apple/: main.lua
sample_projects/test/: 1632_gate_grid.sml  3_gate_loop.sml  export_test_2.sml  many_loops.sml  module.sml  module2.sml  module_inside_itself_test.sml  old_module.sml  test.lua  test.sml
sample_projects/test1/: module.sml
src/: canvas.rs  colors.rs  config.rs  connections.rs  exporter.rs  interaction.rs  lua_scripting.rs  main.rs  part_render.rs  parts.rs  saveload.rs  simulator.rs  state.rs  tools.rs
(+4 files in other folders)
