[package]
name = "smlogic"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui = { version = "0.33.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
egui-notify = "0.21"
parking_lot = "0.12.5"
uuid = { version = "1.23.1", features = ["v4"]}
dirs = "6.0.0"
